# progcheck

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-plz.toml
.github/workflows/: release.yml
