[package]
name = "progcheck"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Run commands sequentially and stop on first failure with truncated output replay."
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/progcheck"
keywords = ["cli", "command", "ci", "validation", "checks"]
include = [
  "/src/**/*",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
shlex = "1"
