[package]
name = "progcheck"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Run commands sequentially and stop on first failure with truncated output replay."
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/progcheck"
repository = "https://github.com/hey-ruffles/progcheck"
keywords = ["cli", "command", "ci", "validation", "checks"]
include = [
  "/src/**/*",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
shlex = "1"

[workspace.metadata.dist]
cargo-dist-version = "0.29.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
